Use generic type for getEntityPathBase